--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         <span class="label">Seconds</span>
       </div>
     </div>
-    <script src="./add.js"></script>
+    <script src="./countdown-timer.js"></script>
   </body>
 </html>
